--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
@@ -144,8 +144,8 @@ spec:
 - `cpu`：Pod 的 CPU 资源，要求配置值 >= 2。
 - `memory`：Pod 的 Memory 资源, 要求配置为大于 10 Gi 的整数，小于 10 Gi 会引发系统异常。
 - `data-file`：OceanBase 数据存储配置，可以指定大小和 `storageClass`, 用作 OceanBase 的数据目录， 建议为大小至少配置为 memory 大小的 3 倍以上。
-- `data-log`：OceanBase 日志存储配置, 可以指定大小和 `storageClass`, 用作 OceanBase 的 Clog 目录， 建议大小至少配置为 memory 大小的 5 倍以上。
-- `log`：OceanBase 进程日志存储配置，可以指定大小和 `storageClass`, 用作 OceanBase 进程日志的存放目录, 建议大小至少配置 30Gi 以上。
+- `data-log`：OceanBase 日志存储配置, 可以指定大小和 `storageClass`, 用作 OceanBase 的 Clog 目录， 建议大小至少配置为 memory 大小的 3 倍以上。
+- `log`：OceanBase 进程日志存储配置，可以指定大小和 `storageClass`, 用作 OceanBase 进程日志的存放目录, 建议大小至少配置 10Gi 以上。
 - `obagent-conf-file`：OBAgent 配置文件目录存储配置, 用来存放 OBAgent 配置文件, 不需要配置特别打，一般配置 1Gi 就可以。
 - `volume`: 用作备份数据的存储，无备份需求可以不配置，但是集群创建好之后无法再另外添加，需要提前做好规划。
 
@@ -250,11 +250,17 @@ obproxy-service   NodePort   1.1.1.1   <none>        2883:30083/TCP,2884:30084/T
 
 可以通过 CLUSTER-IP 和 PORT 的方式进行连接，对应的连接命令为
 ```bash
-# without password
+# use clusterip without password
 mysql -h1.1.1.1 -P2883 -uroot oceanbase -A -c
 
-# with password
+# use clusterip with password
 mysql -h1.1.1.1 -P2883 -uroot -p oceanbase -A -c
+
+# using nodeport without password
+mysql -h${node_ip} -P30083 -uroot oceanbase -A -c
+
+# using nodeport with password
+mysql -h${node_ip} -P30083 -uroot -p oceanbase -A -c
 ```
 
 
