--- a/zh-CN/6.manage/6.backup-and-recovery/2.deploy-nfs.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.deploy-nfs.md
@@ -1,8 +1,8 @@
 # 部署 NFS
 
-在执行备份操作前，如果需要使用 NFS 作为备份目的地，可参考本节内容部署 NFS。
+在选择备份介质时，建议使用 OSS 作为备份的目的端，OSS 作为无状态的对象存储，比有状态的 NFS4 有更高的稳定性。
 
-NFS 分为软件和硬件两种，一般建议使用 OSS 或者专用的 NFS 硬件设备，可以考虑使用阿里云的 NFS 硬件设备。
+如果需要使用 NFS 作为备份目的端，可参考本节内容部署 NFS。NFS 分软件和硬件两种，建议专用的 NFS 硬件设备。
 
 ## 注意事项
 
