--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/5.experience-ddl/1.experience-ddl-of-mysql-mode.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/5.experience-ddl/1.experience-ddl-of-mysql-mode.md
@@ -252,7 +252,7 @@ OceanBase 数据库 MySQL 模式下所支持的列类型的相关转换如下：
 修改列类型的语法如下：
 
 ```sql
-ALTER TABLE table_name MODEFY column_name data_type;
+ALTER TABLE table_name MODIFY column_name data_type;
 ```
 
 ### 修改列类型的示例
