--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/128.oceanbase-dba_ob_archivelog_piece_files-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/128.oceanbase-dba_ob_archivelog_piece_files-of-mysql-mode.md
@@ -17,11 +17,12 @@
 | STATUS | varchar(64) | NO | 切 Piece 的状态：<br>ACTIVE：当前活跃的 Piece<br>FREEZING：正在冻结的 Piece<br>FROZEN：已经冻结的 Piece，此状态后，该 Piece 的状态不会再修改了 |
 | BASE_SCN | bigint(20) unsigned | NO | Piece 理论上的开始位点，第一个 Piece：base_scn≠start_scn；非第一个 Piece：base_scn=start_scn |
 | START_SCN | bigint(20) unsigned | NO | Piece 实际开始位点 |
-| START_SCN_DISPLAY | varchar(26) | NO | 将 START_SCN 转换成时间单位之后的展示 |
+| START_SCN_DISPLAY | datetime(6) | NO | 将 START_SCN 转换成时间单位之后的展示 |
 | CHECKPOINT_SCN | bigint(20) unsigned | NO | 当前归档位点 |
-| CHECKPOINT_SCN_DISPLAY | varchar(26) | NO | 将 CHECKPOINT_SCN 转换成时间单位之后的展示 |
+| CHECKPOINT_SCN_DISPLAY | datetime(6) | NO | 将 CHECKPOINT_SCN 转换成时间单位之后的展示 |
 | MAX_SCN | bigint(20) unsigned | NO | 最大归档位点 |
 | END_SCN | bigint(20) unsigned | NO | Piece 理论上的结束位点 |
+| END_SCN_DISPLAY| datetime(6) |NO | Piece 结束时的时间点|
 | COMPATIBLE | bigint(20) | NO | 日志归档的兼容版本号 |
 | UNIT_SIZE   | bigint(20)   | NO   | 日志归档数据单次压缩或加密的日志块大小，当前暂不支持该字段    |
 | COMPRESSION | varchar(128) | NO   | 压缩算法：<ul><li> none: 表示不压缩 </li><li> lz4_1.0：表示使用压缩算法 lz4_1.0 </li><li>zstd_1.3.8：表示使用压缩算法 zstd_1.3.8</li></ul></br>当前暂不支持该字段    |
