--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/134.oceanbase-dba_ob_archivelog-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/134.oceanbase-dba_ob_archivelog-of-mysql-mode.md
@@ -1,6 +1,9 @@
 # oceanbase.DBA_OB_ARCHIVELOG
+
 ## 功能
+
 展示每个路径上的日志归档状态。
+
 ## 字段说明
 
 | 字段名称 | 类型 | 是否可以为 NULL | 描述 |
@@ -11,13 +14,13 @@
 | DEST_NO | bigint(20) | NO | 标识 log_archive_dest_n |
 | STATUS | varchar(64) | NO | 备份任务的状态：<li>BEGINNING：正在启动日志归档<li>DOING：正在进行日志归档<li>INTERRUPTED：日志归档中断，需要人工介入<li>STOP：日志归档已停止<li>STOPPING：正在停止日志归档 |
 | START_SCN | bigint(20) unsigned | NO | 开始备份位点 |
-| START_SCN_DISPLAY | varchar(26) | NO | 将 START_SCN 转换成时间单位之后的展示 |
+| START_SCN_DISPLAY | datetime(6) | NO | 将 START_SCN 转换成时间单位之后的展示 |
 | CHECKPOINT_SCN | bigint(20) unsigned | NO | 当前归档位点 |
-| CHECKPOINT_SCN_DISPLAY | varchar(26) | NO | 将 CHECKPOINT_SCN 转换成时间单位之后的展示 |
+| CHECKPOINT_SCN_DISPLAY | datetime(6) | NO | 将 CHECKPOINT_SCN 转换成时间单位之后的展示 |
 | COMPATIBLE | bigint(20) | NO | 兼容性版本 |
 | BASE_PIECE_ID | bigint(20) | NO | 该轮 Round 的首个 PIECE ID |
 | USED_PIECE_ID | bigint(20) | NO | 该轮 Round 已使用的 PIECE ID |
-| PIECE_SWITCH_INTERVAL | bigint(20) | NO | Piece 切换周日 |
+| PIECE_SWITCH_INTERVAL | bigint(20) | NO | Piece 切换的时间间隔（周日 -> 周期） |
 | UNIT_SIZE   | bigint(20)   | NO   | 日志归档数据单次压缩或加密的日志块大小，当前暂不支持该字段    |
 | COMPRESSION | varchar(128) | NO   | 压缩算法：<ul><li> none: 表示不压缩 </li><li> lz4_1.0：表示使用压缩算法 lz4_1.0 </li><li>zstd_1.3.8：表示使用压缩算法 zstd_1.3.8</li></ul></br>当前暂不支持该字段    |
 | INPUT_BYTES | bigint(21) | NO | 读取的数据量<br>OceanBase 数据库暂不支持该字段 |
