--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/5.large-object-of-mysql-mode/3.text-type-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/5.large-object-of-mysql-mode/3.text-type-of-mysql-mode.md
@@ -12,7 +12,7 @@
 
 `TINYTEXT` 是最大长度为 256 个字符的 `TEXT` 类型。
 
-每个 `TINYTEXT` 值都使用 1 字节长度的前缀进行存储，该前缀指示值中的字节数。语法如下：
+`TINYTEXT` 语法如下：
 
 ```sql
 TINYTEXT [CHARACTER SET charset_name] [COLLATE collation_name]
@@ -24,7 +24,7 @@ TINYTEXT [CHARACTER SET charset_name] [COLLATE collation_name]
 
 `TEXT` 列的最大长度为 65,536 个字符。
 
-每个 `TEXT` 值都使用 2 字节长度的前缀存储，该前缀指示值中的字节数。可以为 `TEXT` 类型指定一个可选的长度 `M`。语法如下：
+可以为 `TEXT` 类型指定一个可选的长度 `M`。语法如下：
 
 ```sql
 TEXT[(M)] [CHARACTER SET charset_name] [COLLATE collation_name]
@@ -36,9 +36,7 @@ TEXT[(M)] [CHARACTER SET charset_name] [COLLATE collation_name]
 
 `MEDIUMTEXT` 是最大长度为 16,777,216 个字符的 `TEXT` 类型。
 
-每个 `MEDIUMTEXT` 值都使用 3 字节长度的前缀进行存储，该前缀指示值中的字节数。
-
-语法如下：
+`MEDIUMTEXT` 语法如下：
 
 ```sql
 MEDIUMTEXT [CHARACTER SET charset_name] [COLLATE collation_name]
@@ -50,9 +48,9 @@ MEDIUMTEXT [CHARACTER SET charset_name] [COLLATE collation_name]
 
 ## LONGTEXT
 
-`LONGTEXT` 是最大长度为 50331648 或 48 M 个字符的 `TEXT` 类型。`LONGTEXT` 列的有效最大长度还取决于客户端/服务器协议中配置的最大数据包大小和可用内存。
+`LONGTEXT` 是最大长度为 534773760 或 510 M 个字符的 `TEXT` 类型。`LONGTEXT` 列的有效最大长度还取决于客户端/服务器协议中配置的最大数据包大小和可用内存。
 
-每个 `LONGTEXT` 值都使用 4 字节长度的前缀进行存储，该前缀指示值中的字节数。语法如下：
+`LONGTEXT` 语法如下：
 
 ```sql
 LONGTEXT [CHARACTER SET charset_name] [COLLATE collation_name]
