update pdml+modify lob specification

--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/5.large-object-of-mysql-mode/2.blob-type-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/5.large-object-of-mysql-mode/2.blob-type-of-mysql-mode.md
@@ -12,7 +12,7 @@
 
 `TINYBLOB` 是最大长度为 256 个字节的 `BLOB` 类型。
 
-每个 `TINYBLOB` 值都使用 1 字节长度的前缀进行存储，该前缀指示值中的字节数。语法如下：
+`TINYBLOB` 语法如下：
 
 ```sql
 TINYBLOB
@@ -22,7 +22,7 @@ TINYBLOB
 
 `BLOB` 列的最大长度为 65,536 个字节。
 
-每个 `BLOB` 值都使用 2 字节长度的前缀进行存储，该前缀指示值中的字节数。可以为 `BLOB` 类型指定一个可选的长度 `M`。语法如下：
+可以为 `BLOB` 类型指定一个可选的长度 `M`。语法如下：
 
 ```sql
 BLOB[(M)]
@@ -32,7 +32,7 @@ BLOB[(M)]
 
 `MEDIUMBLOB` 是最大长度为 16,777,216 字节的 `BLOB` 类型。
 
-每个 `MEDIUMBLOB` 值都使用 3 字节长度的前缀进行存储，该前缀指示值中的字节数。语法如下：
+`MEDIUMBLOB` 语法如下：
 
 ```sql
 MEDIUMBLOB
@@ -40,9 +40,9 @@ MEDIUMBLOB
 
 ## LONGBLOB
 
-`LONGBLOB` 是最大长度为 50331648 或 48 M 字节的 `BLOB` 类型。`LONGBLOB` 列的最大有效长度取决于客户端/服务器协议中配置的最大数据包大小和可用内存。
+`LONGBLOB` 是最大长度为 534773760 或 510 M 字节的 `BLOB` 类型。`LONGBLOB` 列的最大有效长度取决于客户端/服务器协议中配置的最大数据包大小和可用内存。
 
-每个 `LONGBLOB` 值都使用 4 字节长度的前缀进行存储，该前缀指示值中的字节数。语法如下：
+`LONGBLOB` 语法如下：
 
 ```sql
 LONGBLOB
