--- a/zh-CN/5.administrator-guide/10.high-data-availability/2.backup-and-restoration-management/2.deploy-nfs.md
+++ b/zh-CN/5.administrator-guide/10.high-data-availability/2.backup-and-restoration-management/2.deploy-nfs.md
@@ -1,8 +1,8 @@
 # 部署 NFS
 
-在执行备份操作前，如果需要使用 NFS 软件作为备份目的地，可参考本节内容部署 NFS。
+在选择备份介质时，建议使用 OSS 作为备份的目的端，OSS 作为无状态的对象存储，比有状态的 NFS4 有更高的稳定性。
 
-一般建议使用 OSS 或者专用的 NFS 硬件设备，可以考虑使用阿里云的 NFS 硬件设备。
+如果需要使用 NFS 作为备份目的端，可参考本节内容部署 NFS。NFS 分软件和硬件两种，建议专用的 NFS 硬件设备。
 
 ## 注意事项
 
@@ -16,7 +16,12 @@
 
 * 添加新的机器后，在启动 OBServer 前，需要保证新的机器挂载 NFS 成功或者可以备份到其他介质。
 
-## 部署 NFS 服务器端
+## 部署 NFS 软件的服务器端
+
+<main id="notice" type='notice'>
+<h4>注意</h4>
+<p>如果您使用的是 NFS 硬件设备，请跳过本操作，直接部署 NFS 客户端。</p>
+</main>
 
 1. 登录 NFS 服务器。
 
