--- a/zh-CN/5.administrator-guide/6.basic-database-management/5.manage-data-storage/1.dump-management-1/4.view-dump-information.md
+++ b/zh-CN/5.administrator-guide/6.basic-database-management/5.manage-data-storage/1.dump-management-1/4.view-dump-information.md
@@ -2,7 +2,7 @@
 
 #docslug#/oceanbase-database/oceanbase-database/V4.0.0/view-dump-information
 
-触发转储后，您可以通过视图查看转储进度。
+触发转储后，您可以通过视图查看转储进度和转储历史。
 
 ## 查看转储进度
 
