--- a/zh-CN/5.administrator-guide/10.high-data-availability/2.backup-and-restoration-management/2.deploy-nfs.md
+++ b/zh-CN/5.administrator-guide/10.high-data-availability/2.backup-and-restoration-management/2.deploy-nfs.md
@@ -10,7 +10,7 @@
 
 * 由于 OceanBase 数据库备份的并发控制需依赖 NFS4 的文件锁功能，故在挂载 NFS 时，需使用 NFS 4.1 及以上版本。
 
-* 在使用 NFS 作为备份介质时，必须保证所有 OBServer 都挂载了同一个服务器的 NFS。同时，为保证备份的顺利进行，务必使用本文档中建议的参数挂载 NFS。挂载 NFS 具体操作请参见 [部署 NFS 客户端](#部署%20nfs%20客户端)。
+* 在使用 NFS 作为备份介质时，必须保证所有 OBServer 都挂载了同一个服务器的 NFS。同时，为保证备份的顺利进行，务必使用本文档中建议的参数挂载 NFS。挂载 NFS 具体操作请参见 **部署 NFS 客户端**。
 
 * 在重启 OBServer 时，需要先启动 NFS，再启动 OBServer。
 
