--- a/zh-CN/1.users-guide/7.database-object-management/2.manage-tables/6.modify-a-table.md
+++ b/zh-CN/1.users-guide/7.database-object-management/2.manage-tables/6.modify-a-table.md
@@ -32,8 +32,6 @@ OceanBase 数据库支持新增列、修改列及其属性、删除列等。
   3 rows in set (0.00 sec)
   ```
 
-<!-- -->
-
 * 新增列，支持在指定位置新增列。在 `c1` 列后面指定添 `c4` 列，示例如下：
 
   ```sql
@@ -52,8 +50,6 @@ OceanBase 数据库支持新增列、修改列及其属性、删除列等。
   5 rows in set (0.00 sec)
   ```
 
-<!-- -->
-
 * 新增列，支持在指定位置新增列。在 `c1` 列前面指定添 `c6` 列，示例如下：
 
   ```sql
@@ -71,9 +67,7 @@ OceanBase 数据库支持新增列、修改列及其属性、删除列等。
   6 rows in set (0.00 sec)
   ```
 
-<!-- -->
-
-* 字段解释如下：
+  字段解释如下：
 
   * `Field` ：字段信息为列名。
 
@@ -82,8 +76,6 @@ OceanBase 数据库支持新增列、修改列及其属性、删除列等。
   * `Null` ：表示该列是否允许为空，NO 表示不允许为空，YES 表示允许为空。
 
   * `key` ：字段信息显示为 `PRI` 代表改列为主键列。
-
-<!-- -->
 
 * 修改列属性，支持修改列名称和列类型。示例如下：
 
@@ -129,8 +121,6 @@ OceanBase 数据库支持新增列、修改列及其属性、删除列等。
   >**注意**
   >
   >MODIFY 修改列定义，仅支持增加特定字符数据类型（`VARCHAR`、`VARBINARY`、`CHAR` 等）的长度。
-  
-<!-- -->
 
 * 修改列属性，支持修改列的 `default` 值为 `2`。示例如下：
 
@@ -164,8 +154,6 @@ OceanBase 数据库支持新增列、修改列及其属性、删除列等。
   ```sql
   obclient> ALTER [COLUMN] {SET DEFAULT const_value | DROP DEFAULT}
   ```
-
-<!-- -->
 
 * 删除列，支持删除表中的列，但不允许删除主键列或包含索引的列。示例如下：
 
@@ -306,4 +294,4 @@ OceanBase 数据库支持删除表所属的表组。
 obclient> DROP TABLEGROUP grp1;
 ```
 
-更多表组相关信息，请参见 [管理表组](../../../14.developer-guide/4.create-and-manage-database-objects/4.create-and-manage-table-groups/1.table-groups.md) 章节。
+更多表组相关信息，请参见 [管理表组](../3.manage-table-groups/1.administrator-guide-table-groups.md) 章节。
