--- a/zh-CN/18.supporting-tools/6.tableapi/3.faq.md
+++ b/zh-CN/18.supporting-tools/6.tableapi/3.faq.md
@@ -61,7 +61,7 @@ Caused by: com.mysql.jdbc.exceptions.jdbc4.MySQLSyntaxErrorException: Access den
 
 * 解决方案
 
-  您可使用 obclient 或 MySQL 客户端登录 OceanBase，具体方法可参考 [通过 obclient 连接 OceanBase 租户](../../../14.developer-guide/0.connect-to-oceanbase-database/3.connect-oceanbase-tenants-through-obclient.md) 和 [通过 MySQL 客户端连接 OceanBase 数据库](../../../14.developer-guide/0.connect-to-oceanbase-database/2.connect-oceanbase-tenants-through-MySQL-client.md)。
+  您可使用 obclient 或 MySQL 客户端登录 OceanBase，具体方法可参考 [通过 obclient 连接 OceanBase 租户](../../14.developer-guide/0.connect-to-oceanbase-database/3.connect-oceanbase-tenants-through-obclient.md) 和 [通过 MySQL 客户端连接 OceanBase 数据库](../../14.developer-guide/0.connect-to-oceanbase-database/2.connect-oceanbase-tenants-through-MySQL-client.md)。
 
   ```unknow
   grant select on oceanbase.* to proxyro identified by 'xxx'; 
