--- a/zh-CN/18.supporting-tools/8.hbaseapi/3.use-of-the-hbaseapi-client.md
+++ b/zh-CN/18.supporting-tools/8.hbaseapi/3.use-of-the-hbaseapi-client.md
@@ -9,7 +9,7 @@ HBaseAPI 客户端基于 TableAPI 提供的基本接口，在客户端封装了 
 
 + [HBaseAPI 方案介绍](1.introduction-to-hbaseapi-scheme.md)
 + [使用 OBD 部署 OceanBase 数据库](../../1.users-guide/2.Get-started-quickly/0.Quickly-experience-OceanBase.md)
-+ [通过 MySQL 客户端连接 OceanBase 数据库](../../../14.developer-guide/0.connect-to-oceanbase-database/2.connect-oceanbase-tenants-through-MySQL-client.md)
++ [通过 MySQL 客户端连接 OceanBase 数据库](../../14.developer-guide/0.connect-to-oceanbase-database/2.connect-oceanbase-tenants-through-MySQL-client.md)
 
 ## HBaseAPI 部署
 
