修改 6.flashback-query.md

--- a/zh-CN/6.manage/4.high-availability/6.flashback-query.md
+++ b/zh-CN/6.manage/4.high-availability/6.flashback-query.md
@@ -26,7 +26,7 @@ OceanBase 数据库当前支持用户通过设置租户级配置项 `undo_retent
 
    <main id="notice" type='explain'>
         <h4>说明</h4>
-        <p>MySQL 租户的管理员用户为 <code>root</code> 用户，Oracle 租户的管理员用户为 <code>SYS<code> 用户。</p>
+        <p>MySQL 租户的管理员用户为 <code>root</code> 用户，Oracle 租户的管理员用户为 <code>SYS</code> 用户。</p>
    </main>
 
    连接示例如下，连接数据库时请以实际环境为准。
