--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
@@ -131,7 +131,7 @@
 
 * 在执行备份任务时，如果 `format` 文件不存在或 `format` 文件校验不通过，任务会发起失败。
 
-此外，归档目的端配置成功后，不支持增量配置。例如，假设 NFS 下归档路径 `/data/nfs/backup/archive` 配置的 `BINGDING` 属性为 `Mandatory` ，`PIECE_SWITCH_INTERVAL` 属性为 `1d`。若需要更新 `PIECE_SWITCH_INTERVAL` 为 `2d` ，但保留 `BINGDING` 属性的配置 `Mandatory` ，您仍然需要在命令中指定其他属性的值，否则未指定的属性将使用默认值。
+此外，归档目的端配置成功后，不支持增量配置。例如，假设 NFS 下归档路径 `/data/nfs/backup/archive` 配置的 `BINDING` 属性为 `Mandatory` ，`PIECE_SWITCH_INTERVAL` 属性为 `1d`。若需要更新 `PIECE_SWITCH_INTERVAL` 为 `2d` ，但保留 `BINDING` 属性的配置 `Mandatory` ，您仍然需要在命令中指定其他属性的值，否则未指定的属性将使用默认值。
 
 您需要重新执行以下语句进行修改。
 
