--- a/zh-CN/1.users-guide/2.Get-started-quickly/3.Experience-the-advanced-features-of-OceanBase/4.Experience-the-multi-tenancy-feature.md
+++ b/zh-CN/1.users-guide/2.Get-started-quickly/3.Experience-the-advanced-features-of-OceanBase/4.Experience-the-multi-tenancy-feature.md
@@ -88,7 +88,7 @@ obclient [oceanbase]> SELECT * FROM oceanbase.gv$tenant;
 使用新创建的 tenant1 进行登录，并创建一张测试表。
 
 ```sql
-obclient -hXXX.XX.XXX.106 -P2883 -uroot@tenant1#ob_test -p
+obclient -hXXX.XX.XXX.106 -P2883 -ur***@tenant1#ob_test -p
 obclient [(none)]> show databases;
 +--------------------+
 | Database           |
