--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/9.pl-exception-handling-statement-mysql/1.exception-handling-statement-mysql.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/9.pl-exception-handling-statement-mysql/1.exception-handling-statement-mysql.md
@@ -8,7 +8,7 @@ OceanBase 数据库支持如下 PL 异常处理语句：
 
 * `DECLARE ... HANDLER` 语句用于声明处理程序。详细信息请参见 [DECLARE ... HANDLER](../9.pl-exception-handling-statement-mysql/3.declare-handler-mysql.md)。 
 
-* `RESIGNAL` 语句用于修改异常处理程序中的异常信息。详细信息请参见 [RESIGNAL](../9.pl-exception-handling-statement-mysql/5.resignal-mysql.md)。
+* `RESIGNAL` 语句用于修改异常处理程序中的异常信息。详细信息请参见 [RESIGNAL](../9.pl-exception-handling-statement-mysql/5.RESIGNAL-mysql.md)。
 
 * `SIGNAL` 语句用于引发异常条件。详细信息请参见 [SIGNAL](../9.pl-exception-handling-statement-mysql/6.SINGNAL-mysql.md)。 
 
