--- a/zh-CN/2.quick-start/6.basic-operations/1.database-operations.md
+++ b/zh-CN/2.quick-start/6.basic-operations/1.database-operations.md
@@ -28,7 +28,7 @@
 
   
 
-  更多 `CREATE DATABASE` 语句相关的语法说明请参见《SQL 参考》中 [CREATE DATABASE](../../11.sql-reference-en/5.sql-statements/11.create-database.md)章节。
+  更多 `CREATE DATABASE` 语句相关的语法说明请参见《SQL 参考》中 [CREATE DATABASE](../../10.sql-reference/5.sql-statement/13.sql-statements-create-database.md)章节。
   
 
 
@@ -81,4 +81,4 @@ obclient> DROP DATABASE my_db;
 
 
 
-更多 `DROP DATABASE` 语句相关的语法说明请参见《SQL 参考》中 [DROP DATABASE](../../11.sql-reference-en/5.sql-statements/23.drop-database.md)章节。
+更多 `DROP DATABASE` 语句相关的语法说明请参见《SQL 参考》中 [DROP DATABASE](../../10.sql-reference/5.sql-statement/33.sql-statements-drop-table.md)章节。
