--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/99.dbms-metadata-oracle/1.dbms-metadata-overview-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/99.dbms-metadata-oracle/1.dbms-metadata-overview-oracle.md
@@ -11,6 +11,6 @@ DBMS_METADATA 概述
 DBMS_METADATA 权限说明
 ---------------------------
 
-该系统包属于 `SYS` 用户，并具有是否授予 `PUBLIC` 的执行访问权限。`DBMS_METADATA` 通过调用者权限（即调用者的安全配置文件）运行。
+该系统包属于 `SYS` 用户，并具有授予 `PUBLIC` 的执行访问权限。`DBMS_METADATA` 通过调用者权限（即调用者的安全配置文件）运行。
 
 
