--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/133.dbms-resource-manager-oracle/8.set-consumer-group-mappingn-directive-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/133.dbms-resource-manager-oracle/8.set-consumer-group-mappingn-directive-oracle.md
@@ -34,9 +34,9 @@ DBMS_RESOURCE_MANAGER.SET_CONSUMER_GROUP_MAPPING(
 
 | 属性名称 | 取值 | 说明 |
 | --- | --- | --- |
-| ORACLE_FUNCTION |  COMPACTION_HIGH   | 对应 Mini Merge 和 DDL KV Merge 任务。  |
-| ORACLE_FUNCTION |  COMPACTION_MID   | 对应 Minor Merge  任务。 |
-| ORACLE_FUNCTION |  COMPACTION_LOW   | 对应 Major Merge 任务。  |
+| ORACLE_FUNCTION |  COMPACTION_HIGH   | 对应 `MINI_MERGE` 和 DDL KV Merge 任务。  |
+| ORACLE_FUNCTION |  COMPACTION_MID   | 对应 `MINOR_MERGE` 任务。 |
+| ORACLE_FUNCTION |  COMPACTION_LOW   | 对应 `MAJOR_MERGE` 任务。  |
 | ORACLE_FUNCTION |  HA_HIGH   | 对应复制、Rebuild、恢复任务。   |
 | ORACLE_FUNCTION |  HA_MID   | 对应迁移任务。 |
 | ORACLE_FUNCTION |  HA_LOW   | 对应备份、备份清理等任务。   |
