--- a/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/3.use-canal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/3.use-canal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -69,7 +69,7 @@ ob_cluster -> oblogreader -> oblogmsg -> canal_server -> canal_client -> mysql
     # OceanBase集群参数
     canal.instance.oceanbase.rsList=10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881
     canal.instance.oceanbase.username=root@mysql001#test4000
-    canal.instance.oceanbase.password=1****6
+    canal.instance.oceanbase.password=******
     canal.instance.oceanbase.startTimestamp=0
 
     # oceanbase logproxy参数
