--- a/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/6.use-chunjun-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/6.use-chunjun-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -190,8 +190,7 @@ nErrors                   |  0
 
 ```sql
 [admin@xxx /home/admin]
-$obclient -h10.10.10.2 -P2881 -uroot@mysql001 -p -Dtest_data
-Enter password:
+$obclient -h10.10.10.2 -P2881 -uroot@mysql001 -p****** -Dtest_data
 Reading table information for completion of table and column names
 You can turn off this feature to get a quicker startup with -A
 
