--- a/zh-CN/5.data-migration/5.migrate-data-from-oceanbase-database-to-oracle-database/2.use-datax-to-migrate-oceanbase-database-to-oracle-database.md
+++ b/zh-CN/5.data-migration/5.migrate-data-from-oceanbase-database-to-oracle-database/2.use-datax-to-migrate-oceanbase-database-to-oracle-database.md
@@ -186,7 +186,7 @@ myjob.json 配置文件如下：
                     "name": "oceanbasev10reader",
                     "parameter": {
                         "username": "xxxxxx",
-                        "password": "xxxxxx",
+                        "password": "******",
                         "column": ["*"],
                         "connection": [
                             {
@@ -209,7 +209,7 @@ myjob.json 配置文件如下：
                             }
                         ],
                         "username": "xxxxxx",
-                        "password":"xxxxx",
+                        "password":"******",
                         "writerThreadCount":10,
                         "batchSize": 1000,
                         "memstoreThreshold": "0.9"
