--- a/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/3.use-canal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/3.use-canal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -127,7 +127,7 @@ ob_cluster -> oblogreader -> oblogmsg -> canal_server -> canal_client -> mysql
             jdbc.driverClassName: com.mysql.jdbc.Driver
             jdbc.url: jdbc:mysql://10.10.10.1:3306/test_data?useUnicode=false
             jdbc.username: root
-            jdbc.password: 1****6
+            jdbc.password: ******
     ```
 
 4. 修改适配器库/表映射（以库映射为例）。
