--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/9.pl-exception-handling-statement-mysql/1.exception-handling-statement-mysql.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/9.pl-exception-handling-statement-mysql/1.exception-handling-statement-mysql.md
@@ -10,7 +10,7 @@ OceanBase 数据库支持如下 PL 异常处理语句：
 
 * `RESIGNAL` 语句用于修改异常处理程序中的异常信息。详细信息请参见 [RESIGNAL](../9.pl-exception-handling-statement-mysql/5.RESIGNAL-mysql.md)。
 
-* `SIGNAL` 语句用于引发异常条件。详细信息请参见 [SIGNAL](../9.pl-exception-handling-statement-mysql/6.signal-mysql.md)。 
+* `SIGNAL` 语句用于引发异常条件。详细信息请参见 [SIGNAL](../9.pl-exception-handling-statement-mysql/6.SIGNAL-mysql.md)。 
 
 * `GET DIAGNOSTICS` 语句用于从诊断区域检索信息。详细信息请参见 [GET DIAGNOSTICS](../9.pl-exception-handling-statement-mysql/4.get-diagnostics-mysql.md)。
 
