400ofuse安全扫描修改

--- a/en-US/7.reference/7.command-line-tools/7.ob-admin/3.clog/3.clog_tool.md
+++ b/en-US/7.reference/7.command-line-tools/7.ob-admin/3.clog/3.clog_tool.md
@@ -56,7 +56,7 @@ Usage notes:
 
 * If a clog file contains non-printable characters, ob_admin cannot print these characters by calling the `dump_all` command. In this case, you can use the `dump_hex` command to convert the non-printable characters into hexadecimal characters and then print them.
 
-* For more information about `<clog_file_name>`, see [dump_all](#dump_all%20).
+* For more information about `<clog_file_name>`, see **dump_all**.
 
 ### dump_format
 
@@ -68,7 +68,7 @@ Usage notes:
 
 * Logs printed by the `dump_all` command are not friendly to readers. You can use the `dump_format` command to parse and print the specified clog file in a format that is similar to SQL statements.
 
-* For more information about `<clog_file_name>`, see [dump_all](#dump_all%20).
+* For more information about `<clog_file_name>`, see **dump_all**.
 
 ### dump_filter
 
@@ -80,9 +80,10 @@ Usage notes:
 
 * You can use the `dump_filter` command to print clog records that meet the specified conditions. This reduces the number of printed clog records and facilitates troubleshooting.
 
-* For more information about `<clog_file_name>`, see [dump_all](#dump_all%20).
+* For more information about `<clog_file_name>`, see **dump_all**.
 
 * You can filter log records by specifying filter conditions in the `filter_name` field. The following table describes the valid values of filter_name.
+
    |     Value     |   Description    |
    |----------------|---------|
    | `table_id`     | The data table identifier.  |
@@ -90,6 +91,7 @@ Usage notes:
    | `log_id`       | The log record identifier. |
 
    You can specify one or multiple filter conditions in the `filter_name` field. If you specify multiple filter conditions, separate the conditions with semicolons (<span>;</span>). Examples:
+
    * If you want to parse and print the clog file `101` in the current directory and filter out records of the table `123` in the clog file, run the following command:
 
       ```Shell
@@ -111,11 +113,12 @@ ob_admin clog_tool stat_clog <clog_file_name>
 Usage notes:
 
 * You can use the `stat_clog` command to obtain statistics of the specified clog file, including the file size, number of records, and number of transactions.
+
    > **Note**
    >
    > By using the `CLOG_TOOL_BREAK_ON_FAIL` environment variable, clog_tool can control whether to directly exit or to ignore errors and continue. When `CLOG_TOOL_BREAK_ON_FAIL` is set to true, clog_tool directly exits. When `CLOG_TOOL_BREAK_ON_FAIL` is set to false, clog_tool ignores errors and continues parsing the specified clog file.
 
-* For more information about `<clog_file_name>`, see [dump_all](#dump_all%20).
+* For more information about `<clog_file_name>`, see **dump_all**.
 
 ### dump_meta
 
@@ -126,4 +129,4 @@ ob_admin clog_tool dump_meta <clog_file_name>
 Usage notes:
 
 * You can use the `dump_meta` command to obtain the specified clog file and print only the transaction information in the log records, rather than user data. This helps ensure user data security in some cases.
-* For more information about `<clog_file_name>`, see [dump_all](#dump_all%20).
+* For more information about `<clog_file_name>`, see **dump_all**.
