--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
@@ -1,10 +1,10 @@
-# 在 Kubernetes 集群中部署 OceanBase 数据库
+# 在 Kubernetes 环境中部署 OceanBase 数据库
 
-本文介绍如何通过 ob-operator 在 Kubernetes 集群中部署 OceanBase 数据库。使用 ob-operator 可以简化 OceanBase 在 Kubernetes 中的部署和运维。
+本文介绍如何通过 ob-operator 在 Kubernetes 环境中部署 OceanBase 数据库。目前仅测试了 Kubernetes 1.23.6 版本，其他版本中部署如果有问题，欢迎和我们联系。
 
 ## 部署 ob-operator
 
-ob-operator 可以通过以下两种方式进行部署。
+使用 ob-operator 可以简化 OceanBase 在 Kubernetes 中的部署和运维，您可通过以下两种方式部署 ob-operator。
 
 ### 使用 Helm 部署
 
@@ -51,12 +51,12 @@ kubectl apply -f operator.yaml
 
 #### 配置 Kubernetes 节点 label
 
-ob-operator 会根据配置文件中的 `nodeSelector` 来决定 observer 节点的分布，因此需要首先对 Kubernetes 的 node 节点配置 label, Kubernetes 中一般会有可用区的 label `topology.kubernetes.io/zone`，可以直接使用这个 label，或者单独为 OceanBase 设置 node 节点的 label。
-<!-- 怎么直接使用这个 label，是  kubectl label node node1 topology.kubernetes.io/zone=zone1 这样么-->
+ob-operator 会根据 OceanBase 数据库配置文件 `obcluster.yaml` 中的 `nodeSelector` 来决定 observer 节点的分布，因此需要首先对 Kubernetes 的 node 节点配置 label。
+
 您可以通过如下命令来设置 node 的 label。
 
 ```shell
-kubectl label node ${node_name} ${label_key}=${label_value}
+kubectl label node <node_name> <label_key>=<label_value>
 
 # for example
 kubectl label node node1 ob.zone=zone1
@@ -67,17 +67,16 @@ kubectl label node node1 ob.zone=zone1
 ob-operator 在部署 OceanBase 数据库时需要创建 PVC 作为 OceanBase 数据库的存储，出于性能考虑，推荐使用本地存储, 本文中使用 local-path-provisioner 来管理 PVC。
 
 部署命令如下：
-<!-- 需确认是否存在适配性问题，每一个版本都可以使用 24 版本的 local-path-provisioner 么-->
+
 ```text
-原：kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.22/deploy/local-path-storage.yaml
-现：kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.24/deploy/local-path-storage.yaml
+kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.24/deploy/local-path-storage.yaml
 ```
 
 更多信息可以参考 [local-path-provisioner](https://github.com/rancher/local-path-provisioner)。
 
 ### 部署 OceanBase 集群
-<!-- 部署 OB集群和 ODP 时是否支持使用默认配置进行部署 -->
-OceanBase 集群通过 yaml 配置文件进行定义，您可参考 ob-operator 提供的配置文件进行自定义的修改。您可通过如下命令下载 obcluster 的配置文件。
+
+OceanBase 集群通过 yaml 配置文件进行定义，您可参考 ob-operator 提供的配置文件进行自定义的修改，通过如下命令下载 OceanBase 数据库的配置文件 `obcluster.yaml`。
 
 ```bash
 kubectl https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obcluster.yaml
@@ -151,21 +150,21 @@ spec:
   
 - `cluster`：按需配置，如果需要在该 Kubernetes 中部署 OceanBase 集群，请将 cluster 配置为与 ob-operator 启动参数 `--cluster-name` 相同（默认值为 `cn`）。
 
-- `nodeSelector`: 当前 Zone 的 node 选择策略，按照 node 的 label 进行匹配。
+- `nodeSelector`: 当前 Zone 的 node 选择策略，按照 node 的 label 进行匹配。该配置即上文部署前准备中配置 Kubernetes 节点 label 所用配置。
 
-- `parameters`：按需配置, 自定义的 OceanBase 数据库配置项。
+- `parameters`：按需配置，自定义的 OceanBase 数据库配置项。
   
 - `cpu`：Pod 的 CPU 资源，建议配置为大于 2 的整数，小于 2 会引发系统异常。
   
 - `memory`：Pod 的 Memory 资源，建议配置值大于 10 Gi，小于 10 Gi 会引发系统异常。
   
-- `data-file`：OceanBase 数据存储配置，可以指定大小和 `storageClass`，用作 OceanBase 的数据目录，建议至少配置为 `memory` 大小的 3 倍以上。
+- `data-file`：OceanBase 数据存储配置，可以指定大小和 `storageClassName`，用作 OceanBase 的数据目录，建议至少配置为 `memory` 大小的 3 倍以上。
   
-- `data-log`：OceanBase 日志存储配置, 可以指定大小和 `storageClass`，用作 OceanBase 的 Clog 目录，建议大小至少配置为 `memory` 大小的 5 倍以上。
+- `data-log`：OceanBase 日志存储配置，可以指定大小和 `storageClassName`，用作 OceanBase 的 Clog 目录，建议大小至少配置为 `memory` 大小的 3 倍以上。
 
-- `obagent-conf-file`：OBAgent 配置文件目录存储配置, 用来存放 OBAgent 配置文件, 不需要配置特别大，一般配置大小为 1Gi 就可以。
-  
-- `log`：用作备份数据的存储，无备份需求可以不配置，但是集群创建好之后无法再另外添加，需要提前做好规划。
+- `log`：Oceanbase 进程日志存储配置，可以指定大小和 `storageClassName`，用作 OceanBase 进程日志的存放目录，建议大小至少配置为 10Gi 以上。
+
+- `obagent-conf-file`：OBAgent 配置文件目录存储配置，用来存放 OBAgent 配置文件, 不需要配置特别大，一般配置大小为 1Gi 就可以。
 
 配置文件修改之后可以通过如下命令进行部署：
 
@@ -174,7 +173,7 @@ kubectl apply -f obcluster.yaml
 ```
 
 ### 部署 ODP
-<!-- 是否支持使用默认配置部署 ODP，使用默认配置时，RS_LIST 如何配置 -->
+
 ODP 通过 yaml 配置文件进行定义，您可参考 ob-operator 提供的配置文件进行自定义的修改，通过如下命令下载 ODP 的配置文件：
 
 ```shell
@@ -182,7 +181,7 @@ wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obpro
 wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/service.yaml
 ```
 
-deployment 配置文件内容如下：
+deployment.yaml 文件内容如下：
 
 ```yaml
 # deployment.yaml
@@ -227,12 +226,10 @@ spec:
 - APP_NAME：ODP 的应用名称。
 
 - OB_CLUSTER：ODP 连接的 OceanBase 集群名。
-<!-- 介绍没有看懂需要怎么配置 -->
-- RS_LIST：OceanBase 集群的 rs_list，这里是通过两个环境变量 `SVC_OB_TEST_SERVICE_HOST` 和 `SVC_OB_TEST_SERVICE_PORT` 来配置，环境变量的名字和 OceanBase 数据库的集群名有关，其中 `OB_TEST` 部分是 OceanBase 集群名，需要转换成大写和下划线。
-<!-- 原本的介绍，所以这两个环境变量会自动生成么，生成后配置文件会自动调用？ -->
-- `RS_LIST`: OceanBase 集群的 rs_list, 这里是通过 OceanBase 集群的 service 地址来生成的，当部署好 OceanBase 集群之后，会自动产生两个环境变量 `SVC_OB_TEST_SERVICE_HOST`, `SVC_OB_TEST_SERVICE_PORT`, 分别表示 OceanBase 集群的服务地址和端口。
 
-service 配置中会开放两个端口，一个用来作 sql 连接的端口，一个是监控数据的采集端口。service 配置文件内容如下：
+- RS_LIST：OceanBase 集群的 rs_list，这里是通过两个环境变量 `SVC_OB_TEST_SERVICE_HOST` 和 `SVC_OB_TEST_SERVICE_PORT` 来配置，分别表示 OceanBase 集群的服务地址和端口。环境变量的名字和 OceanBase 数据库的集群名有关，其中 `OB_TEST` 部分是 OceanBase 集群名，需要转换成大写和下划线。
+
+service.yaml 文件中会开放两个端口，一个用来作 SQL 连接的端口，一个是监控数据的采集端口。service.yaml 文件内容如下：
 
 ```yaml
 # service.yaml
@@ -256,10 +253,17 @@ spec:
       nodePort: 30084
 ```
 
+配置文件修改后可通过以下命令进行部署：
+
+```shell
+kubectl apply -f deployment.yaml
+kubectl apply -f service.yaml
+```
+
 ### 连接 OceanBase 集群
 
 推荐通过 ODP 来连接 OceanBase，在部署好 OceanBase 数据库和 ODP 后，您可通过以下命令来获取 ODP 的 service 连接地址。
-<!-- 这里的 1.1.1.1 是示例 IP 对么 -->
+
 ```shell
 kubectl get svc ${servicename} -n ${namespace}
 
@@ -274,31 +278,37 @@ obproxy-service   NodePort   1.1.1.1   <none>        2883:30083/TCP,2884:30084/T
 您可以通过 CLUSTER-IP 和 PORT 的方式进行连接，对应的连接命令如下。
 
 ```shell
-# without password
-mysql -h1.1.1.1 -P2883 -uroot oceanbase -A -c
+# use clusterip without password
+obclient -h1.1.1.1 -P2883 -uroot oceanbase -A -c
 
-# with password
-mysql -h1.1.1.1 -P2883 -uroot -p oceanbase -A -c
+# use clusterip with password
+obclient -h1.1.1.1 -P2883 -uroot -p oceanbase -A -c
+
+# using nodeport without password
+obclient -h<node_ip> -P30083 -uroot oceanbase -A -c
+
+# using nodeport with password
+obclient -h<node_ip> -P30083 -uroot -p oceanbase -A -c
 ```
 
 ## 监控 OceanBase 数据库
 
-### 部署 prometheus
-<!-- 是否支持使用默认配置进行部署 -->
+### 部署 Prometheus
+
+您可参考 ob-operator 提供的 Prometheus 配置文件进行自定义的修改，通过如下命令下载 Prometheus 的配置文件：
+
 ```bash
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/cluster-role.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/cluster-role-binding.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/configmap.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/deployment.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/service.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/cluster-role.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/cluster-role-binding.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/configmap.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/deployment.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/service.yaml
 ```
 
-### 自定义部署 prometheus
-
-prometheus 查询 OBAgent 的请求地址通过 configmap 来进行配置，根据服务名，端口名来进行过滤, 如果 OceanBase 集群或者 ODP 集群进行过自定义的配置，需要根据实际情况设置服务名的正则表达式。
+Prometheus 根据 Kubernetes 中服务的名称和端口来选择收集数据的地址，可以按照正则表达式进行过滤，如下所示在 configmap.yaml 中进行配置。
 
 ```yaml
-# configmap 中关键配置
+# configmap.yaml中部分配置
 scrape_configs:
   - job_name: 'obagent-monitor-basic'
     kubernetes_sd_configs:
@@ -334,41 +344,48 @@ scrape_configs:
       action: keep
 ```
 
-利用 k8s 的服务发现能力，配置服务名称和端口名，可以自动找到所有的 endpoint 节点, 根据对应的请求路径，可以查询到对应的监控数据。
-
-配置说明：
+配置介绍如下。
 
 - service 和 port 说明:
 
-  - oceanbase: ob-operator 会根据部署的 OceanBase 集群名称来创建一个 service， 命名的规则是 `svc-monitor-${obcluster_name}`, 端口名为 `monagent`, 如果部署 OceanBase 集群时自定义了集群名，需要根据实际的集群名称来修改对应配置
+  - OceanBase: ob-operator 会根据部署的 OceanBase 集群名称创建一个 service 用来获取 exporter 地址， service 命名的规则是 `svc-monitor-${obcluster_name}`，端口名为 `monagent`，如果部署 OceanBase 集群时自定义了集群名，需要根据实际的集群名称来修改对应配置。
   
-  - obproxy: 需要配置对应的 ODP 的 service 和 port name
+  - ODP: 需要配置对应 ODP 的 service 和 port name。
 
 - 监控指标的请求路径:
 
-  - OceanBase 集群监控指标： 请求路径分别为 `/metrics/ob/basic`, `/metrics/ob/extra`
+  - OceanBase 集群监控指标：请求路径分别为 `/metrics/ob/basic` 和 `/metrics/ob/extra`。
   
-  - ODP 集群监控指标: ODP 自身支持了 prometheus 协议暴露监控指标的能力，请求路径为 `/metrics`
-  
-### 验证
+  - ODP 集群监控指标: ODP 自身支持了 prometheus 协议暴露监控指标的能力，请求路径为 `/metrics`。
 
-浏览器打开 prometheus 的地址，查看 Status -> Targets, 验证 `proxy-monitor`, `obagent-monitor-host`, `obagent-monitor-basic`, `obagent-monitor-extra` 下的 Endpoint 都是 up 状态
-点击 Graph, 可以输入 `PromQL` 表达式进行查询
+配置文件修改之后可以通过以下命令进行部署：
 
-### 部署 grafana
-<!-- 是否支持默认配置部署 -->
-#### 使用默认配置部署 grafana
-
-```bash
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/configmap.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/pvc.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/deployment.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/service.yaml
+```shell
+kubectl apply -f cluster-role.yaml
+kubectl apply -f cluster-role-binding.yaml
+kubectl apply -f configmap.yaml
+kubectl apply -f deployment.yaml
+kubectl apply -f service.yaml
 ```
 
-### 自定义部署 grafana
+#### 验证
 
-grafana 通过 configmap 设置关键配置信息，包括 prometheus 数据源的地址, 如果 prometheus 进行了自定义部署，需要配置实际的 service 地址
+浏览器打开 Prometheus 的地址，查看 **Status** -> **Targets**，验证 `proxy-monitor`、`obagent-monitor-host`、`obagent-monitor-basic`、`obagent-monitor-extra` 下的 `Endpoint` 都是 up 状态。
+
+单击 Graph，可以输入 PromQL 表达式进行查询。
+
+### 部署 grafana
+
+您可参考 ob-operator 提供的 Grafana 配置文件进行自定义的修改，通过如下命令下载 Grafana 的配置文件：
+
+```bash
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/configmap.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/pvc.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/deployment.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/service.yaml
+```
+
+grafana 通过 configmap.yaml 文件设置关键配置信息，包括 Prometheus 数据源的地址。如果 Prometheus 进行了自定义部署，需要配置实际的 service 地址。
 
 ```yaml
 # configmap 中关键配置
@@ -396,24 +413,23 @@ data:
     }
 ```
 
-配置说明：
+其中，Grafana 的配置中会使用到 Prometheus 的服务地址作为数据源的配置（`datasources` 中的 `url` 字段），需要根据 Prometheus 的实际部署情况来填写。
 
-- `url`：Grafana 的配置中会使用到 prometheus 的服务地址作为数据源的配置(datasource 中的 url 字段)，需要根据 prometheus 的实际部署情况来填写
+#### 验证
 
-### 验证
+浏览器打开 Grafana 的地址，通过 `admin` 用户登陆，默认密码也是 `admin`，第一次登录会提示修改密码。Grafana 的配置中默认携带了 OceanBase 数据库的 dashboard，可以在浏览器中打开以下链接查看：
 
-浏览器打开 Grafana 的地址，通过 `admin` 用户登陆，默认密码也是 `admin`，第一次登录会提示修改密码。
-有三个配置好的 dashboard 可以直接导入
+```shell
+http://${node_ip}:${node_port}/d/oceanbase
+```
 
-- oceanbase: 15215
+主机指标和 ODP 的监控模版可以通过添加如下 id 对应的 dashboard 进行查看。
 
-- 主机: 15216
+- 主机：15216
 
-- obproxy: 15354
+- ODP：15354
 
-导入之后，可以查看对应的监控图表
-
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>ODP 需要有实际请求之后，才会有监控数据展示</p>
-  </main>
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>ODP 需要有实际请求之后，才会有监控数据展示</p>
+</main>
