table, tablegroup, and database do not support the primary zone and locality parameters+add IOPS_WEIGHT

--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/7.create-resource-unit.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/7.create-resource-unit.md
@@ -17,6 +17,7 @@ MAX_CPU [=] cpu_num,
 [MAX_IOPS [=] iops_num,]
 [MIN_CPU [=] cpu_num,]
 [MIN_IOPS [=] iops_num,] 
+[IOPS_WEIGHT [=]iopsweight,]
 [LOG_DISK_SIZE [=] 'size_value'];
 ```
 
@@ -29,6 +30,7 @@ MAX_CPU [=] cpu_num,
 | MAX_IOPS        | 指定 IOPS 的最多数量，为可选项。最小值为 1024。 |
 | MIN_CPU         | 指定 CPU 的最少数量，为可选项。默认等于 `MAX_CPU`，最小值为 1C。  |
 | MIN_IOPS        | 指定 IOPS 的最少数量，为可选项。最小值为 1024。    |
+| IOPS_WEIGHT     | 指定 IOPS 的权重值，为可选项。|
 | LOG_DISK_SIZE | 指定租户的 Unit 日志盘的大小。默认值为内存规格值的 3 倍，最小值为 `2G`。|
 
 ## 示例
@@ -36,6 +38,6 @@ MAX_CPU [=] cpu_num,
 创建资源单元 `unit1` 配置为 4 个 CPU，`5G` 内存，128 个 IOPS，`10G` 日志盘。
 
 ```sql
-obclient> CREATE RESOURCE UNIT unit1 MAX_CPU 4, MEMORY_SIZE '5G', MAX_IOPS 1280,LOG_DISK_SIZE '10G', MIN_IOPS=1024;
+obclient> CREATE RESOURCE UNIT unit1 MAX_CPU 4, MEMORY_SIZE '5G', MAX_IOPS 1280,LOG_DISK_SIZE '10G', MIN_IOPS=1024, IOPS_WEIGHT=1;
 Query OK, 0 rows affected 
 ```
