--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/17.alter-tablegroup-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/17.alter-tablegroup-of-mysql-mode.md
@@ -43,14 +43,6 @@
     | ADD PARTITION opt_range_partition_list
   ```
 
-* 修改表组的 Locality 和 Primary Zone。
-
-  ```sql
-  ALTER TABLEGROUP tablegroup_name alter_tablegroup_actions [, alter_tablegroup_action ...];
-  
-  alter_tablegroup_action:
-      SET LOCALITY [=] locality
-  ```
 
 * 添加非模板一级分区。
 
@@ -94,19 +86,15 @@
 |-------------------|---------------------------------------------------------------------------------------------------------------------|
 | tablegroup_name   | 指定表组。                                                                                                               |
 | table_name        | 表名。对一个表组增加多张表时，表与表之间以逗号（','）分隔。 当添加多个表时，允许表名重复。如果待添加的表已经属于 `tablegroup_name` 的表组，OceanBase 数据库不会报错。 |
-| locality          | 指定表组的 Locality。                                                                                                     |
 | partition_name    | 指定一级分区名。                                                                                                            |
 | subpartition_name | 指定二级分区名。                                                                                                            |
 
 ## 示例
 
-* 创建表组 `tgh`，并将表组的 Locality 修改为 `F@zone1`。
+* 创建表组 `tgh`
 
   ```sql
-  obclient> CREATE TABLEGROUP tgh LOCALITY='F,R{ALL_SERVER}@zone1' PARTITION BY HASH PARTITIONS 10;
-  Query OK, 0 rows affected
-  
-  obclient> ALTER TABLEGROUP tgh SET LOCALITY ='F@zone1';
+  obclient> CREATE TABLEGROUP tgh  PARTITION BY HASH PARTITIONS 10;
   Query OK, 0 rows affected
   ```
 
