评审建议修改

--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
@@ -17,7 +17,7 @@ helm install ob-operator ob-operator/ob-operator --namespace=oceanbase-system --
 
 ### 使用配置文件部署
 
-您可执行如下命令使用默认配置部署 ob-operator。
+您可执行如下命令使用配置文件部署 ob-operator。
 
 ```shell
 # deploy CRD
