adI OPS_WEIGHT delete primary_zone and locality

--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/11.alter-tablegroup-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/11.alter-tablegroup-of-oracle-mode.md
@@ -42,16 +42,6 @@
     | modify_tg_partition_info
   ```
 
-* 修改表组的 Locality 和 Primary Zone。
-
-  ```sql
-  ALTER TABLEGROUP tablegroup_name alter_tablegroup_action [, alter_tablegroup_action];
-  
-  alter_tablegroup_action:
-    SET LOCALITY [=] locality_name
-    |SET PRIMARY_ZONE [=] primary_zone_name
-  ```
-
 * 添加非模板一级分区。
 
   ```sql
@@ -108,41 +98,20 @@
 | partition_name                 | 指定一级分区的名称。                                                                                             |
 | subpartition_name              | 指定二级分区的名称。                                                                                             |
 | modify_tg_partition_info       | 修改表组的分区规则。                                                                                             |
-| LOCALITY locality_name         | 指定表组的 Locality。                                                                                        |
-| PRIMARY_ZONE primary_zone_name | 指定表组的主 Zone。                                                                                           |
 | UPDATE GLOBAL INDEXES          | 该子句来决定是否需要对全局索引进行维护。该子句为可选项。                                                                           |
 
 ## 示例
 
-* 创建表组 `tblgroup1`，并将表组的 Locality 修改为 `F@zone1`，并创建两张关系表 `tbl1` 和 `tbl2`。
+* 创建表组 `tblgroup1`,并创建两张关系表 `tbl1` 和 `tbl2`。
 
   ```sql
-  obclient> CREATE TABLEGROUP tblgroup1 LOCALITY='F,R{ALL_SERVER}@zone1' PARTITION BY HASH PARTITIONS 10;
+  obclient> CREATE TABLEGROUP tblgroup1 PARTITION BY HASH PARTITIONS 10;
   Query OK, 0 rows affected
   
-  obclient> SELECT LOCALITY FROM sys.all_virtual_tablegroup_agent WHERE tablegroup_name ='TBLGROUP1';
-  +------------------------------------+
-  | LOCALITY                           |
-  +------------------------------------+
-  | FULL{1},READONLY{ALL_SERVER}@zone1 |
-  +------------------------------------+
-  1 row in set
-  
-  obclient> ALTER TABLEGROUP tblgroup1 SET LOCALITY ='F@zone1';
+  obclient> CREATE TABLE tbl1(col1 INT, col2 INT) TABLEGROUP = tblgroup1 PARTITION BY HASH(col1) PARTITIONS 10;
   Query OK, 0 rows affected
   
-  obclient> SELECT LOCALITY FROM sys.all_virtual_tablegroup_agent WHERE tablegroup_name ='TBLGROUP1';
-  +------------+
-  | LOCALITY  |
-  +------------+
-  | FULL{1}@zone1 |
-  +------------+
-  1 row in set
-  
-  obclient> CREATE TABLE tbl1(col1 INT, col2 INT) TABLEGROUP = tblgroup1 LOCALITY = 'F@zone1' PARTITION BY HASH(col1) PARTITIONS 10;
-  Query OK, 0 rows affected
-  
-  obclient> CREATE TABLE tbl2(col1 INT, col2 INT) TABLEGROUP = tblgroup1 LOCALITY = 'F@zone1' PARTITION BY HASH(col2) PARTITIONS 10;
+  obclient> CREATE TABLE tbl2(col1 INT, col2 INT) TABLEGROUP = tblgroup1 PARTITION BY HASH(col2) PARTITIONS 10;
   Query OK, 0 rows affected
   ```
 
