--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/207.dbms-xplan-oracle/3.enable-opt-trace-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/207.dbms-xplan-oracle/3.enable-opt-trace-oracle.md
@@ -13,7 +13,7 @@
 DEFAULT_INENTIFIER  constant VARCHAR2(20) := '';
 DEFAULT_LEVEL       constant INT := 1;
 
-PROCEDURE ENABLE_OPT_TRACE(
+DBMS_XPLAN.ENABLE_OPT_TRACE(
     sql_id          IN VARCHAR2 DEFAULT '',
     identifier      IN VARCHAR2 DEFAULT DEFAULT_INENTIFIER,
     level           IN INT DEFAULT DEFAULT_LEVEL
