--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/207.dbms-xplan-mysql/3.enable-opt-trace-mysql.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/207.dbms-xplan-mysql/3.enable-opt-trace-mysql.md
@@ -8,7 +8,7 @@
 DEFAULT_INENTIFIER  constant VARCHAR2(20) := '';
 DEFAULT_LEVEL       constant INT := 1;
 
-PROCEDURE ENABLE_OPT_TRACE(
+DBMS_XPLAN.ENABLE_OPT_TRACE(
     sql_id          IN VARCHAR2 DEFAULT '',
     identifier      IN VARCHAR2 DEFAULT DEFAULT_INENTIFIER,
     level           IN INT DEFAULT DEFAULT_LEVEL
@@ -21,7 +21,7 @@ PROCEDURE ENABLE_OPT_TRACE(
 | --- | --- |
 | sql_id | 用于标记需要追踪的 SQL，例如当前测试需要跑 PL 程序，同时希望只追踪 PL 函数内特定的 SQL，可以通过设置 `sql_id` 标记。一旦设置了 `sql_id`，只会追踪特定的 SQL，否则追踪所有的 SQL。 |
 | identifier | 用于标记 Trace 文件后缀，方便用户查找自己的 Trace 文件。 |
-| level | 用于设置追踪的级别：<ul> <li> 0：默认行为。</li> <li> 1：额外打印每个模块的使用的内存、时间。</li> <li> 2：额外打印每个改写 Query Block 对应的 SQL，无论是否发生改写。</li></ul> <br> **注意**：`level` 是数据库关键字，Oracle 租户需要使用双引号（“”）包裹，MySQL 租户需要使用“`”包裹。 |
+| level | 用于设置追踪的级别：<ul> <li> 0：默认行为。</li> <li> 1：额外打印每个模块的使用的内存、时间。</li> <li> 2：额外打印每个改写 Query Block 对应的 SQL，无论是否发生改写。</li></ul> <br> **注意**：`level` 是数据库关键字，Oracle 租户需要使用双引号（“”）包裹，MySQL 租户需要使用反引号“`”包裹。 |
 
 ## 示例
 
