--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md
@@ -200,22 +200,20 @@ on_commit_option:
 
 ## 参数说明
 
-|             参数              |                                                                                                                                                                                                                                              描述                                                                                                                                                                                                                                               |
-|-----------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| GLOBAL TEMPORARY            | 将该表创建为临时表。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
-| DEFAULT expression          | 指定列的默认值。`expression` 支持包含 Sequence 的函数表达式。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
-| DUPLICATE_SCOPE             | 用来指定复制表属性，取值如下： <ul><li> `none`：表示该表是一个普通表。</li>   <li> `cluster`：表示该表是一个复制表，Leader 需要将事务复制到 Cluster 的所有 F 副本及 R 副本。</li></ul>    不指定  `DUPLICATE_SCOPE` 的情况下，默认值为 `none`。 目前，OceanBase 数据库仅支持 `cluster` 级别的复制表。                                                                                                                                                                                     |
-| BLOCK_SIZE                  | 指定表的微块大小。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
+|             参数       |               描述               |
+|-----------------------------|---------------------------------------------------------------|
+| GLOBAL TEMPORARY            | 将该表创建为临时表。      |
+| DEFAULT expression          | 指定列的默认值。`expression` 支持包含 Sequence 的函数表达式。    |
+| DUPLICATE_SCOPE             | 用来指定复制表属性，取值如下： <ul><li> `none`：表示该表是一个普通表。</li>   <li> `cluster`：表示该表是一个复制表，Leader 需要将事务复制到 Cluster 的所有 F 副本及 R 副本。</li></ul>    不指定  `DUPLICATE_SCOPE` 的情况下，默认值为 `none`。 目前，OceanBase 数据库仅支持 `cluster` 级别的复制表。    |
+| BLOCK_SIZE                  | 指定表的微块大小。     |
 | COMPRESSION                 | 指定存储格式 Flat/Encoding 以及压缩方法，对应如下： <ul><li> `nocompress`：使用 Flat 格式，不进行压缩。</li>   <li> `compress [basic]`：使用 Flat 格式和 lz4_1.0 压缩方法。</li>   <li> `compress for oltp`：使用 Flat 格式和 zstd_1.0 压缩方法。</li>   <li>  `query low` 或者 `query high`：使用 Encoding 格式和  lz4_1.0 压缩方法。</li>   <li>  `archive low` 或者 `archive high`：使用 Encoding 格式和 zstd_1.0 压缩方法。</li> </ul>   |
-| primary_zone                | 指定主 Zone（副本 Leader 所在 Zone）。                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
-| table_group            | 指定表所属的 Table Group 属性。                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
-| comment                     | 注释。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
-| LOCALITY                    | 描述副本在 Zone 间的分布情况，例如：`F@z1,F@z2,F@z3` 表示 `z1`、`z2`、`z3` 为全功能副本，`z4` 为只读副本。                                                                                                                                                                                                                                                                                                                                                                                                              |
-| physical_attribute          | `PCTFREE`: 指定宏块保留空间百分比。其它属性 `STORAGE`、`TABLESPACE` 等仅为了语法兼容方便迁移，不生效。                                                                                                                                                                                                                                                                                                                                                                                                         |
-| ENABLE/DISABLE ROW MOVEMENT | 是否允许更会致行在不同分区间移动的分区键更新。                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
-| ON COMMIT DELETE ROWS       | 事务级临时表，提交时删除数据。                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
-| ON COMMIT PRESERVE ROWS     | 会话级临时表，会话结束时删除数据。                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
-| parallel_clause             | 指定表级别的并行度： <ul><li> `NOPARALLEL`：并行度为 1，为默认配置。</li>   <li> `PARALLEL integer`：指定并行度，`integer` 取值大于等于 `1`。</li> </ul>   **注意**  当指定并行度时，优先级关系如下：通过 Hint 指定的并行度 \> 通过 `ALTER SESSION` 指定的并行度 \> 表级别的并行度。                                                                                                                                                                                               |
+| table_group            | 指定表所属的 Table Group 属性。    |
+| comment                     | 注释。     |
+| physical_attribute          | `PCTFREE`: 指定宏块保留空间百分比。其它属性 `STORAGE`、`TABLESPACE` 等仅为了语法兼容方便迁移，不生效。    |
+| ENABLE/DISABLE ROW MOVEMENT | 是否允许在不同分区间移动的分区键更新。  |
+| ON COMMIT DELETE ROWS       | 事务级临时表，提交时删除数据。  |
+| ON COMMIT PRESERVE ROWS     | 会话级临时表，会话结束时删除数据。  |
+| parallel_clause             | 指定表级别的并行度： <ul><li> `NOPARALLEL`：并行度为 1，为默认配置。</li>   <li> `PARALLEL integer`：指定并行度，`integer` 取值大于等于 `1`。</li> </ul>   **注意**  当指定并行度时，优先级关系如下：通过 Hint 指定的并行度 \> 通过 `ALTER SESSION` 指定的并行度 \> 表级别的并行度。   |
 
 ## 示例
 
