--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/228.odciconst-oracle/1.odciconst-overview-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/228.odciconst-oracle/1.odciconst-overview-oracle.md
@@ -1,7 +1,7 @@
 ODCIConst 概述 
 =================================
 
-`ODCIConst` 系统包中定义的常量适用于 PL，安装于 `catodci.sql` 脚本。
+`ODCIConst` 系统包中定义的常量适用于 PL，系统自动使用 `catodci.sql` 安装 `ODCIConst` 系统包。
 
 
   <main id="notice" >
