--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-indexes-of-mysql-mode/3.view-indexes-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-indexes-of-mysql-mode/3.view-indexes-of-mysql-mode.md
@@ -32,7 +32,7 @@ obclient> SHOW INDEX FROM test;
 
 * `Cardinality`：基数的意思，表示索引中唯一值的数目的估计值。
 
-* `Sub_part`：前置索引的意思，如果列只是被部分地编入索引，则为被编入索引的字符的数目。如果整列被编入索引，则为 `NULL`。
+* `Sub_part`：前缀索引，如果列只是被部分地编入索引，则为被编入索引的字符的数目。如果整列被编入索引，则为 `NULL`。
 
 * `Packed`：指示关键字如何被压缩。如果没有被压缩，则为 `NULL`。
 
