--- a/zh-CN/1.users-guide/3.installation-and-deployment/12.install-oceanbase-database-by-using-rpm-packages.md
+++ b/zh-CN/1.users-guide/3.installation-and-deployment/12.install-oceanbase-database-by-using-rpm-packages.md
@@ -14,7 +14,7 @@
 
 ### 安装 OBD
 
-1. 运行以下命令，下载 OBD 安装包。
+1. 运行如下命令，下载 OBD 安装包。
 
    ```bash
    wget https://mirrors.aliyun.com/oceanbase/community/stable/el/7/x86_64/ob-deploy-x.x.x.el7.x86_64.rpm
@@ -24,16 +24,16 @@
    >
    > 示例中的安装包可能不是最新版本，建议您下载最新的安装包。详细信息，参考 [OBD 发行版本](https://github.com/oceanbase/obdeploy/releases)。
 
-2. 运行以下命令，安装 OBD。
+2. 运行如下命令，安装 OBD。
 
    ```bash
-   yum install -y ob-deploy-1.0.0-1.el7.x86_64.rpm
+   yum install -y ob-deploy-*.rpm
    source /etc/profile.d/obd.sh
    ```
 
 ### 获取 OceanBase 数据库安装包
 
-运行以下命令，下载 OceanBase 数据库安装包：
+运行如下命令，下载 OceanBase 数据库安装包：
 
 ```bash
 wget https://mirrors.aliyun.com/oceanbase/community/stable/el/7/x86_64/oceanbase-ce-libs-x.x.x.el7.x86_64.rpm
