--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
@@ -32,7 +32,7 @@
    <p>对于从 OceanBase 数据库 V4.0.x 版本升级到 V4.1.0 版本的场景，版本升级后需要更改归档路径。</p>
    </main>
 
-   设置后，可通过 `DBA_OB_ARCHIVELOG_DEST` 视图查看详细设置信息，具体操作请参见 [查看归档参数](8.view-parameters-of-log-archive.md)。
+   设置后，可通过 `DBA_OB_ARCHIVE_DEST` 视图查看详细设置信息，具体操作请参见 [查看归档参数](8.view-parameters-of-log-archive.md)。
 
    详细配置说明如下：
 
