--- a/zh-CN/1.users-guide/12.reference-guide/3.system-configuration-items/253.log_disk_size.md
+++ b/zh-CN/1.users-guide/12.reference-guide/3.system-configuration-items/253.log_disk_size.md
@@ -17,10 +17,10 @@
 <main id="notice" type='explain'>
   <h4>说明</h4>
   <ul>
-  <li>当 `log_disk_size` 配置为负或者大于磁盘总空间时，OBServer 节点初始化失败。</li>
-  <li>当不配置 `log_disk_size` 或配置为 0 时，会自动分配磁盘。</li>
-  <li>当 `log_disk_size` 配置不为 0 时，根据 `log_disk_size` 的值来计算 `free_quota`。</li>
-  <li>OBServer 节点启动时，会预分配足够多的日志文件。例如：用户配置 `log_disk_size = 100 G`，那么 OBServer 第一次启动时，就会预分配 100 G 的日志文件作为日志文件池。</li>
+  <li>当 <code>log_disk_size</code> 配置为负或者大于磁盘总空间时，OBServer 节点初始化失败。</li>
+  <li>当不配置 <code>log_disk_size</code> 或配置为 0 时，会自动分配磁盘。</li>
+  <li>当 <code>log_disk_size</code> 配置不为 0 时，根据 <code>log_disk_size</code> 的值来计算 <code>free_quota</code>。</li>
+  <li>OBServer 节点启动时，会预分配足够多的日志文件。例如：用户配置 <code>log_disk_size = 100 G</code>，那么 OBServer 节点第一次启动时，就会预分配 100 G 的日志文件作为日志文件池。</li>
   <li>OBServer 节点上创建租户 Unit 时，会为 Unit 预留足够多的日志盘空间，如果本地剩余日志盘空间（日志盘可用空间总大小 — 已分配空间）不满足 Unit 规格要求，则创建租户 Unit 失败。</li>
   </ul>
 </main>
