410应用开发反馈问题修改

--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/3.prepare-the-installation-package.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/3.prepare-the-installation-package.md
@@ -21,9 +21,9 @@
        <td>请联系技术支持获取最新 OCP Docker 镜像。</td>
    </tr>
    <tr>
-       <td>OBServer docker image</td>
+       <td>MetaDB docker image</td>
        <td>用于部署 OCP MetaDB、MonitorDB。</td>
-       <td>请联系技术支持获取最新 OBServer Docker 镜像。</td>
+       <td>请联系技术支持获取最新 MetaDB Docker 镜像。</td>
    </tr>
    <tr>
    <tr>
