--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/3.delete-data-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/3.delete-data-of-mysql-mode.md
@@ -4,7 +4,7 @@
 
 ## 数据删除准备
 
-在更新表数据前，请确认以下事项：
+在删除表数据前，请确认以下事项：
 
 * 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
   
