--- a/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/1.object-naming-conventions/1.overview-of-object-naming-conventions.md
+++ b/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/1.object-naming-conventions/1.overview-of-object-naming-conventions.md
@@ -45,8 +45,7 @@
   | 索引名     | 64 字节。    |
   | 视图名     | 64 字节。    |
   | 别名      | 255 字节。   |
-
-  <!--| 表组名     | 128 字节。   |-->
+  | 分区名     | 64 字符。   |
 
 * Oracle 模式。
 
@@ -61,6 +60,7 @@
   | 视图名    | 128 字节。   |
   | 别名     | 255 字节。   |
   | 对象名    | 128 字节。   |
+  | 分区名     | 64 字符。   |
 
 ## ODP 最大连接数限制
 
