--- a/zh-CN/1.users-guide/1.oceanbase-database/7.release-notes.md
+++ b/zh-CN/1.users-guide/1.oceanbase-database/7.release-notes.md
@@ -1,10 +1,10 @@
 # 发布说明
 
-本文主要介绍 3.1.4 版本 OceanBase 数据库的新特征，以及在之前版本数据库基础上新增的功能和做出的改动。
+本文主要介绍当前版本 OceanBase 数据库的新特征，以及在之前版本数据库基础上新增的功能和做出的改动。
 
 ## 概要说明
 
-在 V3.1.4 版本，OceanBase 数据库针对社区项目应用反馈，优化提升内核易用性与稳定性，服务广大社区用户。
+在当前版本中，OceanBase 数据库针对社区项目应用反馈，优化提升内核易用性与稳定性，服务广大社区用户。
 
 * 内核能力提升：支持数据文件动态按需分配，支持直方图类型统计信息采集与监控。
 
