--- a/zh-CN/5.administrator-guide/10.high-data-availability/2.backup-and-restoration-management/4.data-backup/1.preparation-before-data-backup.md
+++ b/zh-CN/5.administrator-guide/10.high-data-availability/2.backup-and-restoration-management/4.data-backup/1.preparation-before-data-backup.md
@@ -73,8 +73,9 @@
    ```sql
    obclient> select * from cdb_ob_backup_parameter\G
    TENANT_ID: 1002
-   NAME: data_backup_dest
-   VALUE: file:///data/nfs/backup/data
+        NAME: data_backup_dest
+       VALUE: file:///data/nfs/backup/data
+   1 rows in set
    ```
 
 ## 注意事项及说明
