--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
@@ -90,6 +90,7 @@
    TENANT_ID: 1002
         NAME: data_backup_dest
        VALUE: file:///data/nfs/backup/data
+   1 rows in set
    ```
 
 ## 注意事项及说明
