--- a/zh-CN/5.administrator-guide/10.high-data-availability/2.backup-and-restoration-management/4.data-backup/1.preparation-before-data-backup.md
+++ b/zh-CN/5.administrator-guide/10.high-data-availability/2.backup-and-restoration-management/4.data-backup/1.preparation-before-data-backup.md
@@ -71,7 +71,8 @@
 3. 配置成功后，`SYS` 租户可通过视图 `CDB_OB_BACKUP_PARAMETER` 查看当前集群中各租户的备份路径等信息。
 
    ```sql
-   obclient> select * from cdb_ob_backup_parameter\G
+   obclient> SELECT * FROM oceanbase.CDB_OB_BACKUP_PARAMETER\G
+   *********************** 1. row ********************
    TENANT_ID: 1002
         NAME: data_backup_dest
        VALUE: file:///data/nfs/backup/data
