--- a/zh-CN/1.users-guide/3.installation-and-deployment/15.deploy-oceanbase-database-in-the-production-environment.md
+++ b/zh-CN/1.users-guide/3.installation-and-deployment/15.deploy-oceanbase-database-in-the-production-environment.md
@@ -68,15 +68,15 @@ yum install -y ob-deploy
 
 #### 离线安装 OBD
 
-如果您的机器不能访问公网，您可以从 OceanBase 官网下载 OBD，建议下载最新版本的安装包。详细信息，参考 [获取安装包](../3.installation-and-deployment/12.install-oceanbase-database-by-using-rpm-packages.md)。下载完成后，将 OBD 复制到您的中控机器上。
+如果您的机器不能访问公网，您可以从  [OceanBase 软件下载中心](https://www.oceanbase.com/softwarecenter) 下载 OBD，建议下载最新版本的安装包。下载完成后，将 OBD 复制到您的中控机器任一目录下。
 
-在 CentOS 或 RedHat 系统上，执行以下命令安装 OBD：
+在 CentOS 或 RedHat 系统上，在安装包所在目录下执行如下命令安装 OBD：
 
 ```bash
 yum install ob-deploy-x.x.x.el7.x86_64.rpm
 ```
 
-在 Ubuntu 或 Debian 系统上，执行以下命令安装 OBD：
+在 Ubuntu 或 Debian 系统上，在安装包所在目录下执行如下命令安装 OBD：
 
 ```bash
 alien --scripts -i ob-deploy-x.x.x.el7.x86_64.rpm
@@ -88,9 +88,7 @@ alien --scripts -i ob-deploy-x.x.x.el7.x86_64.rpm
 
 > **注意**
 >
-> * 安装 OBClient 需要 root 权限。
->
-> * 您必须首先下载 OBClient 的依赖包 LibOBClient。详细信息，参考 [获取安装包](../3.installation-and-deployment/12.install-oceanbase-database-by-using-rpm-packages.md)。
+> 安装 OBClient 需要 root 权限。
 
 #### 在线安装 OBClient
 
@@ -103,16 +101,16 @@ yum install -y obclient
 
 #### 离线安装 OBClient
 
-如果您的机器不能访问公网，您可以从 OceanBase 官网 [下载中心](https://www.oceanbase.com/softwareCenter) 下载 OBClient，建议下载最新版本的安装包。下载完成后，将 OBClient 复制到您的中控机器上。
+如果您的机器不能访问公网，您可以从 [OceanBase 软件下载中心](https://www.oceanbase.com/softwareCenter) 下载 OBClient 和依赖包 LibOBClient，建议下载最新版本的安装包。下载完成后，将安装包复制到您的中控机器任一目录下。
 
-在 CentOS 或 RedHat 系统上，执行以下命令安装 OBClient：
+在 CentOS 或 RedHat 系统上，在安装包所在目录下执行如下命令安装 OBClient：
 
 ```bash
 yum install libobclient-x.x.x.el7.x86_64.rpm
 yum install obclient-x.x.x-2.el7.x86_64.rpm
 ```
 
-在 Ubuntu 或 Debian 系统上，执行以下命令安装 OBLibs：
+在 Ubuntu 或 Debian 系统上，在安装包所在目录下执行如下命令安装 OBClient：
 
 ```bash
 alien --scripts -i libobclient-x.x.x.el7.x86_64.rpm
