--- a/zh-CN/1.users-guide/6.basic-database-management/1.manage-clusters/1.create-a-cluster.md
+++ b/zh-CN/1.users-guide/6.basic-database-management/1.manage-clusters/1.create-a-cluster.md
@@ -82,7 +82,7 @@
 
 * 您的机器可以连接公网
   
-  若您的机器不能连接公网，您需手动下载 RPM 包并进行配置，详情请参考 [使用 RPM 包安装 OceanBase 数据库](../../3.installation-and-deployment/12.install-oceanbase-database-by-using-rpm-packages.md)。
+  若您的机器不能连接公网，您需手动下载 RPM 包并进行配置，详情请参考 [使用命令行部署 OceanBase 数据库生产环境](../../3.installation-and-deployment/15.deploy-oceanbase-database-in-the-production-environment.md) 中 **步骤三：配置 OBD**。
 
 * 您已在中控机器上安装了 OBD。
 
